Fix spacing

--- a/src/styles/components/_hero-banner.scss
+++ b/src/styles/components/_hero-banner.scss
@@ -1,5 +1,5 @@
 .hero-banner {
-  @apply h-[94vh] text-center pt-[16vh] space-y-32;
+  @apply h-[94vh] text-center pt-[14vh] space-y-16;
 
   &__chevron-animation {
     -moz-animation: bounce 2s infinite;
